# sample-pytest-benchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
.benchmarks/Darwin-CPython-3.9-64bit/: 0001_sample_store.json
employees/: models.py  services.py
employees/migrations/: 0001_initial.py  0002_alter_employee_address.py  0003_alter_employee_phone_number.py  0004_alter_employee_salary.py
employees/tests/: factories.py  test_services.py
sample_store/: asgi.py  settings.py  urls.py  wsgi.py
