[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_local_folder = "apps,utils,tests,python_project_template"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sample_store.settings"
python_files = ["tests.py", "test_*.py", "*_tests"]
addopts = "--benchmark-skip --benchmark-save=sample_store"

[tool.poetry]
name = "python_project_template"
version = "0.1.0"
description = "Template for python projects"
authors = []

[tool.poetry.dependencies]
python = "3.9.1"
prettyconf = "*"
Django = "^3.2.4"
psycopg2 = "^2.9.1"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
coverage = "*"
ipdb = "*"
ipython = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-randomly = "*"
safety = "*"
pytest-benchmark = "^3.4.1"
factory-boy = "^3.2.0"
flake8 = "^3.9.2"
black = "^21.6b0"
pytest-django = "^4.4.0"
isort = "^5.9.1"
